.provarCaches/00D5f000005vwGkEAI/objects/rstk__icreplenish__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_icreplenish</customHelpPage>
    <description>icreplenish__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__icreplenish_div__r.rstk__externalid__c &amp; &apos;_&apos; &amp; rstk__icreplenish_item__r.rstk__icitem_item__r.rstk__peitem_item__c &amp; &apos;_&apos; &amp; rstk__icreplenish_site__r.rstk__sysite_site__c &amp; &apos;_&apos; &amp; rstk__icreplenish_project__r.rstk__pjproj_proj__c &amp; &apos;_&apos; &amp; rstk__icreplenish_locid__r.rstk__sylocid_locid__c &amp; &apos;_&apos; &amp; rstk__icreplenish_locnum__c</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>formula external id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__icreplenish_item__r.rstk__icitem_item__r.rstk__peitem_item__c  + &apos; (&apos; +  rstk__icreplenish_locid__r.rstk__sylocid_locid__c + &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>formula name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icreplenish_createicreq__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, rather than planning a transfer from another Location, an Inventory Requisition is generated.</inlineHelpText>
        <label>Create Purchase Requisition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__icreplenish_delaydays__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This value is used to offset the Requested Processing Date on the Planned Transfer generated when inventory drops below the Minimum Stocking Quantity.</inlineHelpText>
        <label>Transfer Request Delay Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icreplenish_dfltxferqty__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Default Transfer Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icreplenish_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Division</description>
        <inlineHelpText>The Division for which this record applies.</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>DRP Location Replenishment Maintenance</relationshipLabel>
        <relationshipName>Replenishment_Location_Master</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icreplenish_frlocid__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>When using transfers (not Create Reqs), this is the Location ID that will be used on a transfer request from which the inventory will be transferred.</inlineHelpText>
        <label>Transfer From Location ID</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>DRP Location Replenishment Maintenance (Transfer From Location ID)</relationshipLabel>
        <relationshipName>Replenishment_Location_Master1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icreplenish_frlocnum__c</fullName>
        <inlineHelpText>When using transfers (not Create Reqs), this is the Location Number that will be used on a transfer request from which the inventory will be transferred.</inlineHelpText>
        <label>Transfer from Location Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icreplenish_frproject__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>When using transfers (not Create Reqs), this is the Project that will be used on a transfer request from which the inventory will be transferred.</inlineHelpText>
        <label>Transfer From Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>DRP Location Replenishment Maintenance (Transfer From Project)</relationshipLabel>
        <relationshipName>Replenishment_Location_Master1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icreplenish_frsite__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>When using transfers (not Create Reqs), this is the Site that will be used on a transfer request from which the inventory will be transferred.</inlineHelpText>
        <label>Transfer From Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>DRP Location Replenishment Maintenance (Transfer From Site)</relationshipLabel>
        <relationshipName>Replenishment_Location_Master</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icreplenish_isocountry__c</fullName>
        <description>icreplenish_isocountry__c</description>
        <label>ISO Country Codes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>rstk__ISO_Country_Codes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__icreplenish_item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to ICITEM</description>
        <inlineHelpText>The Item Number for which this replenishment applies.</inlineHelpText>
        <label>Item Number</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>DRP Location Replenishment Maintenance</relationshipLabel>
        <relationshipName>Replenishment_Location_Master</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icreplenish_locid__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to Sylocid</description>
        <inlineHelpText>This is the Location ID within the Division and Site that will be replenished.  Must be a valid Location for the Site defined.</inlineHelpText>
        <label>Location ID</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>DRP Location Replenishment Maintenance (Location ID)</relationshipLabel>
        <relationshipName>Replenishment_Location_Master</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icreplenish_locnum__c</fullName>
        <inlineHelpText>The Location Number within the Div, Site &amp; Loc ID that will be replenished. If using pre-defined Location Numbers, must be valid Location Number for the specified Loc ID. If pre-defined Location Numbers are not used, can be any value up to 10 characters.</inlineHelpText>
        <label>Location Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icreplenish_maxqtyoh__c</fullName>
        <inlineHelpText>This defines the ideal quantity that should be maintained in the specified Location.  Calculated quantities to transfer or purchase will be determined that will bring the inventory level up to this quantity.</inlineHelpText>
        <label>Desired Inventory On Hand</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icreplenish_minstockqty__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Minimum Stocking Quantity</description>
        <inlineHelpText>This defines the stocking level that when the inventory quantity goes below for the Item and Location defined triggers a replenishment Transfer Request or Purchase Requisition.</inlineHelpText>
        <label>Minimum Stocking Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icreplenish_multiplier__c</fullName>
        <inlineHelpText>When inventory levels drop below the Minimum Stocking Quantity and a quantity is calculated to replenish the given location, the transfer or purchase quantities recommended will be in increments of this value.</inlineHelpText>
        <label>Replenish Multiplier</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icreplenish_netsupdmd__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, demands, supplies &amp; OH inventory will be netted &amp; the recommended quantity to transfer or purchase will be based on that result. Demands and supplies are based on the Division and Site specified, &amp; the OH inventory of the Location specified.</inlineHelpText>
        <label>Transfer Net of Supplies &amp; Demands</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__icreplenish_project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to PJ proj</description>
        <inlineHelpText>The Project Number for which the given Item replenishment applies.  If Project Control is not active, this is the Home Project for the given Division.</inlineHelpText>
        <label>Project Number</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>DRP Location Replenishment Maintenance (Project Number)</relationshipLabel>
        <relationshipName>Replenishment_Location_Master</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icreplenish_shiptocity__c</fullName>
        <inlineHelpText>User-defined alpha-numeric value up to 40 characters in length.  Used on Planned Transfer picklists and packing slips.</inlineHelpText>
        <label>Ship-To City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icreplenish_shiptocountry__c</fullName>
        <inlineHelpText>User-defined alpha-numeric value up to 40 characters in length.  Used on Planned Transfer picklists and packing slips.</inlineHelpText>
        <label>Ship-To Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icreplenish_shiptoname__c</fullName>
        <inlineHelpText>User-defined alpha-numeric value up to 50 characters in length.  Used on Planned Transfer picklists and packing slips.</inlineHelpText>
        <label>Ship-To Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icreplenish_shiptostate__c</fullName>
        <inlineHelpText>User-defined alpha-numeric value up to 20 characters in length.  Used on Planned Transfer picklists and packing slips.</inlineHelpText>
        <label>Ship-To State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icreplenish_shiptostreet__c</fullName>
        <inlineHelpText>User-defined alpha-numeric value up to 255 characters in length.  Used on Planned Transfer picklists and packing slips.</inlineHelpText>
        <label>Ship-To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__icreplenish_shiptozip__c</fullName>
        <inlineHelpText>User-defined alpha-numeric value up to 20 characters in length.  Used on Planned Transfer picklists and packing slips.</inlineHelpText>
        <label>Ship-To Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icreplenish_site__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to SYSITE</description>
        <inlineHelpText>This is the Inventory Site that will be replenished.</inlineHelpText>
        <label>Inventory Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>DRP Location Replenishment Maintenance (Inventory Site)</relationshipLabel>
        <relationshipName>icreplenishsites</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icreplenish_tolocid__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Location ID of the Inventory Location that the replenishment quantity will be transferred to. See page help for more info.</inlineHelpText>
        <label>Transfer To Location ID</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>DRP Location Replenishment Maintenance (Transfer To Location ID)</relationshipLabel>
        <relationshipName>Replenishment_Location_Master2</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icreplenish_tolocnum__c</fullName>
        <inlineHelpText>This is the Location Number of the Inventory Location that the replenishment quantity will be transferred to.</inlineHelpText>
        <label>Transfer To Location Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>DRP Location Replenishment Maintenance</label>
    <listViews>
        <fullName>rstk__RS_Replenishment_Location_Maintenance</fullName>
        <columns>NAME</columns>
        <columns>rstk__icreplenish_div__c</columns>
        <columns>rstk__icreplenish_item__c</columns>
        <columns>rstk__icreplenish_site__c</columns>
        <columns>rstk__icreplenish_locid__c</columns>
        <columns>rstk__icreplenish_locnum__c</columns>
        <columns>rstk__icreplenish_minstockqty__c</columns>
        <columns>rstk__icreplenish_createicreq__c</columns>
        <columns>rstk__icreplenish_dfltxferqty__c</columns>
        <columns>rstk__icreplenish_frsite__c</columns>
        <columns>rstk__icreplenish_frlocid__c</columns>
        <columns>rstk__icreplenish_frlocnum__c</columns>
        <columns>rstk__icreplenish_tolocid__c</columns>
        <columns>rstk__icreplenish_tolocnum__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Replenishment Location Maintenance</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>DRP Location Replenishment Maintenance</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DRP Location Replenishment Maintenance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Max_Inventory_On_Hand</fullName>
        <active>true</active>
        <description>Max Inventory On Hand cannot be less than zero.</description>
        <errorConditionFormula>NOT(ISBLANK(rstk__icreplenish_maxqtyoh__c)) &amp;&amp; rstk__icreplenish_maxqtyoh__c &lt; 0</errorConditionFormula>
        <errorMessage>Max Inventory On Hand cannot be less than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Project_to_Project_Transfer</fullName>
        <active>true</active>
        <description>Project to Project Transfer requires the Location ID and Numbers to be the same</description>
        <errorConditionFormula>rstk__icreplenish_project__c != rstk__icreplenish_frproject__c &amp;&amp; !rstk__icreplenish_createicreq__c &amp;&amp; ( rstk__icreplenish_locid__c != rstk__icreplenish_frlocid__c || rstk__icreplenish_locnum__c != rstk__icreplenish_frlocnum__c)</errorConditionFormula>
        <errorMessage>Project to Project Transfer requires the Location ID and Numbers to be the same</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Replenish_Multiplier</fullName>
        <active>true</active>
        <description>Replenish Multiplier cannot be less than zero.</description>
        <errorConditionFormula>NOT(ISBLANK(rstk__icreplenish_multiplier__c)) &amp;&amp; rstk__icreplenish_multiplier__c &lt; 0</errorConditionFormula>
        <errorMessage>Replenish Multiplier cannot be less than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__delaydays_validation</fullName>
        <active>true</active>
        <errorConditionFormula>rstk__icreplenish_delaydays__c &lt; 0</errorConditionFormula>
        <errorMessage>Transfer Request Delay Days cannot be less than zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__div_validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(rstk__icreplenish_div__c) || 
(!ISNEW() &amp;&amp; ISCHANGED(rstk__icreplenish_div__c))</errorConditionFormula>
        <errorMessage>Division is required and once set cannot be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__frlocid_validation</fullName>
        <active>true</active>
        <errorConditionFormula>!ISBLANK(rstk__icreplenish_frlocid__c) &amp;&amp; (rstk__icreplenish_frsite__c  &lt;&gt; rstk__icreplenish_frlocid__r.rstk__sylocid_site__c)</errorConditionFormula>
        <errorMessage>From Location ID must belong to the From Site.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__frproject_validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(rstk__icreplenish_frproject__c) || 
(rstk__icreplenish_div__c &lt;&gt; rstk__icreplenish_frproject__r.rstk__pjproj_div__c)</errorConditionFormula>
        <errorMessage>From Project is required and must belong to the replenish division.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__frsite_validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(rstk__icreplenish_frsite__c) ||
rstk__icreplenish_frsite__r.rstk__sysite_div__c &lt;&gt; rstk__icreplenish_div__c</errorConditionFormula>
        <errorMessage>Transfer From Site is required and must belong to the replenish division.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__item_validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(rstk__icreplenish_item__c) || 
(rstk__icreplenish_item__r.rstk__icitem_div__c &lt;&gt; rstk__icreplenish_div__c) ||
(!ISNEW() &amp;&amp; ISCHANGED(rstk__icreplenish_item__c))</errorConditionFormula>
        <errorMessage>Item Number is required and must belong to the replenish division. Once set it cannot be modified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__location_type</fullName>
        <active>true</active>
        <description>Location type for selected Location ID/ Transfer From Location ID/	
Transfer To Location ID  should not be of Type Consigned.</description>
        <errorConditionFormula>(!ISBLANK(rstk__icreplenish_locid__c) &amp;&amp;  TEXT(rstk__icreplenish_locid__r.rstk__sylocid_loctype_pl__c ) == &apos;Consigned&apos;) || (!ISBLANK(rstk__icreplenish_frlocid__c) &amp;&amp; TEXT(rstk__icreplenish_frlocid__r.rstk__sylocid_loctype_pl__c) == &apos;Consigned&apos;) ||(!ISBLANK(rstk__icreplenish_tolocid__c) &amp;&amp; TEXT(rstk__icreplenish_tolocid__r.rstk__sylocid_loctype_pl__c) == &apos;Consigned&apos;)</errorConditionFormula>
        <errorMessage>Location type for selected Location ID/ Transfer From Location ID/	
Transfer To Location ID  should not be of Type Consigned.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__locid_validation</fullName>
        <active>true</active>
        <description>Location id (if specified) must belong to the replenish site and not modifiable.</description>
        <errorConditionFormula>(!ISBLANK(rstk__icreplenish_locid__c) &amp;&amp; rstk__icreplenish_locid__r.rstk__sylocid_site__c &lt;&gt; rstk__icreplenish_site__c) ||
(!ISNEW() &amp;&amp; ISCHANGED(rstk__icreplenish_locid__c))</errorConditionFormula>
        <errorMessage>Location id (if specified) must belong to the replenish site and not modifiable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__locnum_validation</fullName>
        <active>true</active>
        <errorConditionFormula>(ISBLANK( rstk__icreplenish_locid__c ) &amp;&amp; !ISBLANK( rstk__icreplenish_locnum__c ))|| (!ISNEW() &amp;&amp; ISCHANGED(rstk__icreplenish_locnum__c ))</errorConditionFormula>
        <errorDisplayField>rstk__icreplenish_locnum__c</errorDisplayField>
        <errorMessage>Location Number is not modifiable and cannot be specified without Location ID.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__maxqtyoh_validation</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(rstk__icreplenish_maxqtyoh__c) || rstk__icreplenish_maxqtyoh__c &lt;= 0</errorConditionFormula>
        <errorMessage>Desired Inventory On Hand is required and must be greater than zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__minstockqty_validation</fullName>
        <active>true</active>
        <errorConditionFormula>rstk__icreplenish_minstockqty__c &lt; 0</errorConditionFormula>
        <errorMessage>Minimum Stocking Quantity cannot be less than zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__project_validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(rstk__icreplenish_project__c) || 
(rstk__icreplenish_project__r.rstk__pjproj_div__c &lt;&gt; rstk__icreplenish_div__c) || (!ISNEW() &amp;&amp; ISCHANGED(rstk__icreplenish_project__c))</errorConditionFormula>
        <errorMessage>Project is required and must belong to the replenish division. Once set it cannot be modified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__site_validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(rstk__icreplenish_site__c) || 
(rstk__icreplenish_site__r.rstk__sysite_div__c &lt;&gt; rstk__icreplenish_div__c) ||
(!ISNEW() &amp;&amp; ISCHANGED(rstk__icreplenish_site__c))</errorConditionFormula>
        <errorMessage>Site is required and must belong to the replenish division. Once set it cannot be modified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__tolocid_validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(rstk__icreplenish_locid__c) &amp;&amp; ISBLANK(rstk__icreplenish_tolocid__c)</errorConditionFormula>
        <errorMessage>Transfer To Location ID is required when Location ID is not specified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__tolocid_validation2</fullName>
        <active>true</active>
        <errorConditionFormula>!ISBLANK( rstk__icreplenish_locid__c ) &amp;&amp; ( rstk__icreplenish_locid__c &lt;&gt;  rstk__icreplenish_tolocid__c )</errorConditionFormula>
        <errorMessage>When Location ID is specified, Transfer To Location ID must match Location ID.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__tolocnum_validation</fullName>
        <active>true</active>
        <description>To location number cannot be blank if Location Id is empty</description>
        <errorConditionFormula>ISBLANK( rstk__icreplenish_locnum__c ) &amp;&amp; ISBLANK( rstk__icreplenish_tolocnum__c )</errorConditionFormula>
        <errorMessage>Transfer to Location Number is required when Location Number is not specified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__tolocnum_validation2</fullName>
        <active>true</active>
        <errorConditionFormula>!ISBLANK( rstk__icreplenish_locnum__c ) &amp;&amp; ( rstk__icreplenish_locnum__c &lt;&gt;  rstk__icreplenish_tolocnum__c )</errorConditionFormula>
        <errorMessage>When Location Number is specified, Transfer To Location Number must match Location Number.</errorMessage>
    </validationRules>
</CustomObject>